--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Tic Tac Toe</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="flex items-center justify-center min-h-screen bg-gray-900">
+    <h1 class="text-4xl font-bold text-white">Hello World</h1>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
+
