--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -1,15 +1,36 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!--CHANGE ICON LATER-->
+    <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-  </head>
-  <body class="flex items-center justify-center min-h-screen bg-gray-900">
-    <h1 class="text-4xl font-bold text-white">Hello World</h1>
+</head>
+<body >
+    <div class="title">Tic Tac Toe</div>
+        
+    <!-- Tic Tac Toe Grid -->
+    <div class="ttt-grid-bg">
+        <div class="ttt-grid">
+            <div class="ttt-grid-cell">X</div>
+            <div class="ttt-grid-cell">X</div>
+            <div class="ttt-grid-cell">X</div>
+            <div class="ttt-grid-cell">X</div>
+            <div class="ttt-grid-cell">X</div>
+            <div class="ttt-grid-cell">X</div>
+            <div class="ttt-grid-cell">X</div>
+            <div class="ttt-grid-cell">X</div>
+            <div class="ttt-grid-cell">X</div>
+        </div>
+
+    </div>
+
+
+    <div class="footer"> Ellmaer Ranjber </div>
+    
     <script type="module" src="/src/main.ts"></script>
-  </body>
+</body>
 </html>
 
 
