Improve tic-tac-toe UI
Enhanced the scoreboard and grid layout for better clarity and responsiveness in index.html.
Updated main.ts to select grid cells dynamically from the grid container

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -21,65 +21,78 @@
         <main
             class="flex-grow flex flex-col items-center justify-center px-4 space-y-4"
         >
-            <!-- SCORE BOARD -->
-            <div
-                id="score-board"
-                class="text-2xl md:text-3xl lg:text-4xl font-semibold"
-            >
-                Sample Text
-            </div>
-
-            <!-- GRID -->
-            <div id="ttt-grid-bg" class="flex justify-center items-center">
+            <!-- Wrapper for Scoreboard and Grid -->
+            <div class="w-[85vw] max-w-[400px] mx-auto flex flex-col space-y-4">
+                <!-- SCORE BOARD -->
                 <div
-                    id="ttt-grid"
-                    class="grid grid-cols-3 gap-0 w-[85vw] max-w-[400px] aspect-square border-[6px] border-gray-500"
+                    id="score-board"
+                    class="flex justify-between items-center w-full text-2xl md:text-3xl lg:text-4xl font-semibold"
                 >
-                    <!-- 9 cells -->
+                    <span>
+                        <span class="text-amber-500">PLAYER:</span>
+                        <span id="player-letter">X</span>
+                    </span>
+                    <span>
+                        <span class="text-cyan-400">BOT:</span>
+                        <span id="ai-letter">O</span>
+                    </span>
+                </div>
+
+                <!-- GRID -->
+                <div
+                    id="ttt-grid-bg"
+                    class="flex justify-center items-center bg-zinc-700"
+                >
                     <div
-                        class="flex items-center justify-center border-4 border-gray-500 bg-slate-100 text-black text-3xl md:text-5xl font-bold"
+                        id="ttt-grid"
+                        class="grid grid-cols-3 gap-0 w-[85vw] max-w-[400px] aspect-square border-[3px] md:border-[6px] border-zinc-700"
                     >
-                        X
-                    </div>
-                    <div
-                        class="flex items-center justify-center border-4 border-gray-500 bg-slate-100 text-black text-3xl md:text-5xl font-bold"
-                    >
-                        X
-                    </div>
-                    <div
-                        class="flex items-center justify-center border-4 border-gray-500 bg-slate-100 text-black text-3xl md:text-5xl font-bold"
-                    >
-                        X
-                    </div>
-                    <div
-                        class="flex items-center justify-center border-4 border-gray-500 bg-slate-100 text-black text-3xl md:text-5xl font-bold"
-                    >
-                        X
-                    </div>
-                    <div
-                        class="flex items-center justify-center border-4 border-gray-500 bg-slate-100 text-black text-3xl md:text-5xl font-bold"
-                    >
-                        X
-                    </div>
-                    <div
-                        class="flex items-center justify-center border-4 border-gray-500 bg-slate-100 text-black text-3xl md:text-5xl font-bold"
-                    >
-                        X
-                    </div>
-                    <div
-                        class="flex items-center justify-center border-4 border-gray-500 bg-slate-100 text-black text-3xl md:text-5xl font-bold"
-                    >
-                        X
-                    </div>
-                    <div
-                        class="flex items-center justify-center border-4 border-gray-500 bg-slate-100 text-black text-3xl md:text-5xl font-bold"
-                    >
-                        X
-                    </div>
-                    <div
-                        class="flex items-center justify-center border-4 border-gray-500 bg-slate-100 text-black text-3xl md:text-5xl font-bold"
-                    >
-                        X
+                        <!-- 9 cells -->
+                        <div
+                            class="flex items-center justify-center m-1 bg-slate-100 text-black text-4xl md:text-5xl font-bold"
+                        >
+                            O
+                        </div>
+                        <div
+                            class="flex items-center justify-center m-1 bg-slate-100 text-black text-4xl md:text-5xl font-bold"
+                        >
+                            X
+                        </div>
+                        <div
+                            class="flex items-center justify-center m-1 bg-slate-100 text-black text-4xl md:text-5xl font-bold"
+                        >
+                            O
+                        </div>
+                        <div
+                            class="flex items-center justify-center m-1 bg-slate-100 text-black text-4xl md:text-5xl font-bold"
+                        >
+                            X
+                        </div>
+                        <div
+                            class="flex items-center justify-center m-1 bg-slate-100 text-black text-4xl md:text-5xl font-bold"
+                        >
+                            O
+                        </div>
+                        <div
+                            class="flex items-center justify-center m-1 bg-slate-100 text-black text-4xl md:text-5xl font-bold"
+                        >
+                            X
+                        </div>
+                        <div
+                            class="flex items-center justify-center m-1 bg-slate-100 text-black text-4xl md:text-5xl font-bold"
+                        >
+                            O
+                        </div>
+                        <div
+                            class="flex items-center justify-center m-1 bg-slate-100 text-black text-4xl md:text-5xl font-bold"
+                        >
+                            X
+                        </div>
+                        <div
+                            class="flex items-center justify-center m-1 bg-slate-100 text-black text-4xl md:text-5xl font-bold"
+                        >
+                            O
+                        </div>
                     </div>
                 </div>
             </div>
@@ -87,7 +100,7 @@
             <!-- RETRY BUTTON -->
             <button
                 id="retry"
-                class="bg-rose-500 hover:bg-emerald-500 transition duration-500 text-white px-10 py-4 rounded-xl text-2xl md:text-3xl font-bold"
+                class="bg-indigo-500 ease-in-out hover:scale-110 transition-transform duration-500 text-slate-50 px-10 py-4 rounded-xl text-2xl md:text-3xl font-bold"
             >
                 Retry
             </button>
